tests/transpiler/x/java/tail_recursion.error
exit status 1
Main.java:6: error: illegal start of expression
        ]}
        ^
1 error
